--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ Modified by Lewis Lebentz too. (https://lew.im).
 	<table class="hide-while-loading table table-striped">
 		<thead>
 			<tr>
-				<th>Name</th>
-				<th>Date Created</th>
+				<th>Date---Branch-Commit---Binary---OS</th>
+				<th>Created On</th>
 				<th>Size</th>
-				<th>Type</th>
+				<th>File Type</th>
 			</tr>
 		</thead>
 		<tbody id="tbody-content">
