--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Modified by Lewis Lebentz too. (https://lew.im).
 
 		// set a reasonable title instead of "Bucket loading"
 		var title = 'Neblio Continuous Deployment Builds';
-		var subtitle = 'WARNING: These "nightly" builds are created every time a GitHub commit is created that passes our automated suite of tests. They may be buggy and/or have partially developed features. They should be considered, at best, "alpha builds."'
+		var subtitle = 'WARNING: These "nightly" builds are created every time a GitHub commit is created that passes our automated suite of tests. They may be buggy and/or have partially developed features. They should be considered, at best, as "alpha builds."'
 		document.title = title;
 		$('#h1-title').text( title );
 		$('#h4-title').text( subtitle );
