--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Modified by Lewis Lebentz too. (https://lew.im).
 	var bucketUrl = document.location.href.replace( /\/[^\/]+$/, '' );
 
 	// TODO: Convert from s3-website URL to s3 URL automatically
-	bucketUrl = "https://neblio-build-staging.ams3.digitaloceanspaces.com";
+	bucketUrl = "https://builds.nebl.io";
 	var compiledTemplate;
 	var createdFolders = [];
 
