--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Modified by Lewis Lebentz too. (https://lew.im).
 	var bucketUrl = document.location.href.replace( /\/[^\/]+$/, '' );
 
 	// TODO: Convert from s3-website URL to s3 URL automatically
-	bucketUrl = "https://builds.nebl.io";
+	bucketUrl = "https://builds.nebl.io/file-listing";
 	var compiledTemplate;
 	var createdFolders = [];
 
